# nlp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  skills-lock.json
docs/: Informe.md  TASK.md
docs/adr/: README.md  experimento-01-baseline-modelos-tradicionales.md  experimento-02-features-linguisticas.md  experimento-03-embeddings-transformers.md  experimento-04-importancia-atributos.md  experimento-05-analisis-errores.md
docs/presentacion/: Presentacion_FakeNews_NLP.pptx  build.js  package-lock.json
notebooks/: 01_eda.ipynb  02_preprocessing_and_splits.ipynb  03_baseline_models.ipynb  04_embeddings_and_transformers.ipynb  04_linguistic_features.ipynb  05_embeddings_and_transformers.ipynb  05_embeddings_and_transformers_colab.ipynb  05_feature_importance.ipynb  06_error_analysis.ipynb  06_feature_importance.ipynb  07_error_analysis.ipynb
scripts/: consolidate_results.py  generate_notebooks.py  run_preprocessing.py
src/: metrics.py  modeling.py  paths.py  plotting.py  preprocessing.py
src/nlp/: __init__.py  bootstrap.py  embeddings.py  error_analysis.py  features.py  interpretability.py  io.py  metrics.py  modeling.py  paths.py  plotting.py  preprocessing.py  setup.py  transformers_data.py
