[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlp-fake-news"
version = "0.1.0"
description = "Clasificación de fake news por patrones lingüísticos (TP NLP)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
    "scikit-learn>=1.9.0",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "pillow>=12.2.0",
    "nltk>=3.9.4",
    "regex>=2026.5.9",
    "spacy>=3.8.14",
    "en-core-web-sm==3.8.0",
    "gensim>=4.4.0",
    "wordcloud>=1.9.6",
    "joblib>=1.5.3",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "huggingface-hub>=1.20.1",
    "tokenizers>=0.22.0,<=0.23.0",
    "safetensors>=0.8.0",
    "datasets>=5.0.0",
    "pyarrow>=24.0.0",
    "accelerate>=1.14.0",
    "jupyter>=1.1.1",
    "notebook>=7.6.0",
    "jupyterlab>=4.6.0",
    "ipykernel>=7.3.0",
    "tqdm>=4.68.3",
    "vaderSentiment>=3.3.2",
]

[project.scripts]
setup = "nlp.bootstrap:main"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.uv]
package = true

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.hatch.build.targets.wheel]
packages = ["src/nlp"]

[tool.ty.environment]
python = ".venv"
python-version = "3.12"
root = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".venv",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
